--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "useTabs": false,
   "tabWidth": 2,
   "semi": true,
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "trailingComma": "es5",
+  "printWidth": 80
 }
