--- a/package.json
+++ b/package.json
@@ -59,6 +59,13 @@
     "rxjs-tslint-rules": "^4.29.1",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "~3.7.5"
-  }
+  },
+  "husky": {
+    "hooks": {
+        "pre-commit": "pretty-quick --staged && ng lint",
+        "pre-push": "ng build --aot true"
+    }
+}
 }
