--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "format:fix": "pretty-quick --staged",
-    "precommit": "run-s format:fix lint"
+    "precommit": "run-s format:fix lint",
+    "format:prettier": "yarn prettier -c --write 'src/**/*.{ts,scss,html}'"
   },
   "private": true,
   "dependencies": {
